# pchelichka

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.base
.devcontainer/: Dockerfile  devcontainer.json
src/betaflight_gazebo/: CMakeLists.txt  package.xml
src/betaflight_gazebo/src/: BetaflightPlugin.cpp  BetaflightSocket.cpp
src/controller/: package.xml  setup.cfg  setup.py
src/controller/controller/: absolute_controller.py  camera.py  commands.py  configuration.py  controller.py  elrs_test.py  hid.py  joystick.py  pid.py  pid_controller.py  savgol_filtered_data.py  test_arm.py  tx.py  util.py
src/controller/launch/: analog_pid.launch.py  openipc.launch.py  setup.launch.py
src/controller/scripts/: lowpass_filter_generator.py  savgol_filter_generator.py
src/dji/: CMakeLists.txt  package.xml
src/dji/src/: dji.cpp
src/elrs/: CMakeLists.txt  package.xml
src/elrs/include/elrs/: constants.hpp  elrs_node.hpp  util.hpp
src/elrs/src/: elrs_node.cpp  main.cpp  util.cpp
src/perception/: package.xml  setup.py
src/perception/launch/: dji.launch.py  sensors.launch.py  sensors_analog.launch.py
src/perception/perception/: calibrate.py  calibrate_fisheye.py  camera.py  camera_analog.py  camera_sim.py  perception_node.py  telemetry.py
src/perception/resource/: calibration.npz  calibration_dji.npz  calibration_openipc.npz  dji_stream_info.txt
src/perception/scripts/: calibrate.py  calibrate_fisheye.py  dji_stream
src/sitl/: CMakeLists.txt  package.xml
src/sitl/launch/: sim.launch.py
src/sitl/models/aruco_marker/: model.sdf
src/sitl/models/camera/: model.sdf
src/sitl/models/iris_with_standoffs/: model.sdf
src/sitl/worlds/: empty_betaflight_world.sdf
src/telemetry_interfaces/: CMakeLists.txt  package.xml
src/telemetry_interfaces/srv/: GetAttitude.srv  GetBatteryVoltage.srv  GetPitch.srv  GetYaw.srv
